--- a/Teacher_Panel/Messages/message.html
+++ b/Teacher_Panel/Messages/message.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Rooms</title>
     <link rel=stylesheet id=google-fonts-1-css href="https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=swap&amp;ver=6.6" media=all>
-    <link rel="stylesheet" href="message.css">
-    <link rel="stylesheet" href="../Styles/Shared/teacher-panel.css">
+    <link rel="stylesheet" href="../../Teacher_Panel/Messages/message.css">
+    <link rel="stylesheet" href="../../Styles/Shared/teacher-panel.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel=stylesheet id=google-fonts-1-css href="https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=swap&amp;ver=6.6" media=all>
     <link rel="stylesheet" href="../../Styles/Shared/scrollbar.css">
-    <link rel="stylesheet" href="../..../..//Teacher_Panel/Messages/style.css">  
+    <link rel="stylesheet" href="../../Teacher_Panel/Messages/style.css">  
   </html>
 <body>
 
@@ -50,14 +50,14 @@
               </a>
             </li>
             <li>
-              <a href="../..//Teacher_Panel/Time-Table/time-table.html" class="active">
+              <a href="../../Teacher_Panel/Time-Table/time-table.html" class="active">
                 <i class="fa-solid fa-comment"></i>
                 <div class="notification-message"></div>
                 <span class="links_name">Messages</span>
               </a>
             </li>
             <li>
-              <a href="../..../..//Teacher_Panel/Answers/answer.html">
+              <a href="../../Teacher_Panel/Answers/answer.html">
                 <i class="fa-solid fa-file-circle-check"></i>
                 <div class="notification-Answers"></div>
                 <span class="links_name">Answers</span>
@@ -179,7 +179,7 @@
 
   
 
-    <script type="module" src="/Scripts/Shared/teacher-panel.js"></script>
+    <script type="module" src="../../Scripts/Shared/teacher-panel.js"></script>
     <script type="module" src="../../Teacher_Panel/Messages/message.js"></script>
     <script type="module" src="../../Scripts/Shared/teacher-shared.js"></script>
   </body>
