--- a/HTML/LoginPage.html
+++ b/HTML/LoginPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Animated Login Form</title>
+	<title>Login Form</title>
 	<link rel="stylesheet" type="text/css" href="../Styles/LoginPage.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
